maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:12: error: type mismatch;
 found   : Unit
 required: Int
                          droite();
                                ^